@@ -1,3 +1,15 @@
+2018-01-11  Patrick Bernardi  <bernardi@adacore.com>
+
+	* libgnat/s-parame*.adb, libgnat/s-parame*.ads: Remove unneeded
+	Default_Sec_Stack_Size.
+	* libgnat/s-secsta.adb (SS_Allocate): Handle the fixed secondary stack
+	limit check so that the integer index does not overflow. Check the
+	dynamic stack allocation does not cause the secondary stack pointer to
+	overflow.
+	(SS_Info): Align colons.
+	(SS_Init): Cover the case when bootstraping with an old compiler that
+	does not set Default_SS_Size.
+
 2018-01-11  Ed Schonberg  <schonberg@adacore.com>
 
 	* sem_ch3.adb (Add_Internal_Interface_Entities): When checking the
